--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,7 +14,7 @@
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">
-        Inbox
+        Mensaje
       </ion-title>
     </ion-toolbar>
   </ion-header>
@@ -22,4 +22,16 @@
   <ion-list>
     <app-message *ngFor="let message of getMessages()" [message]="message"></app-message>
   </ion-list>
+
+  <div style="display:flex; justify-content: center;" >
+    <ion-button href="/index">
+      <ion-icon slot="start" name="star"></ion-icon>
+      Ir a la página principal
+    </ion-button>
+    <ion-button href="/cards">
+      <ion-icon slot="start" name="star"></ion-icon>
+      Ir a la página 2
+    </ion-button>
+  </div> 
+
 </ion-content>
